<resources>
    <string name="app_name">Gym Pal</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="signUsername">Username</string>
    <string name="signPassword">Password</string>
    <string name="signRepassword">Retype Password</string>
    <string name="signEmail">Email</string>
    <string name="signPhone">Phone</string>
    <string name="signMeUp">Sign me up!</string>
    <string name="profile">Profile</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"><u>Profile</u></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Developer</string>
    <string name="water_intake_format">Water intake: %d cups</string>
    <string name="menu_home">Home</string>
    <string name="menu_help">Settings</string>
    <string name="menu_food">Add Food</string>
    <string name="menu_search">Find GymPal</string>
    <string name="menu_stats">Lifting Stats</string>
    <string name="menu_goals">Lifting Goals</string>
    <string name="change_pass">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="menu_contact">Contact</string>

    <string name="disclaimer">By tapping "Create Account" or "Log In" you have agreed to our <u>TERMS &amp; CONDITIONS</u>. Click here to see how we use your data in <u>PRIVATE POLICY</u>.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="squat">Squat:</string>
    <string name="stats_title">Enter Your Lifting PRs (lbs)</string>
    <string name="bench_press">Bench Press:</string>
    <string name="deadlift">DeadLift:</string>
    <string name="menu_exercise">Exercise Planner</string>
</resources>