<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/drawer_food"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/drawer_stats"
            android:icon="@drawable/ic_launcher_gympal"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/drawer_goals"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/drawer_exercises"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>