<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/drawer_home">

    <fragment
        android:id="@+id/drawer_home"
        android:name="com.example.project1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="foodName"
            app:argType="string"
            android:defaultValue="default" />
        <argument
            android:name="brandName"
            app:argType="string" />
        <argument
            android:name="calories"
            app:argType="string"
            android:defaultValue="default" />
    </fragment>

    <fragment
        android:id="@+id/drawer_search"
        android:name="com.example.project1.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/activity_search" />

    <fragment
        android:id="@+id/drawer_help"
        android:name="com.example.project1.ui.help.SettingsFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/activity_settings" />

    <fragment
        android:id="@+id/drawer_stats"
        android:name="com.example.project1.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/drawer_food"
        android:name="com.example.project1.ui.food.FoodFragment"
        android:label="@string/menu_food">
        <action
            android:id="@+id/action_nav_food_to_nav_home"
            app:destination="@id/drawer_home" />
    </fragment>
</navigation>