<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".updateStats"
    android:background="@color/black">

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="379dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="@string/stats_title"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/lift1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textborder"
        android:backgroundTint="@null"
        android:drawableLeft="@drawable/ic_launcher_gympal"
        android:drawablePadding="7.5dp"
        android:ems="10"
        android:hint="@string/squat"
        android:textSize="25dp"
        android:inputType="number"
        android:paddingLeft="12dp"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lift2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textborder"
        android:backgroundTint="@null"
        android:drawableLeft="@drawable/ic_launcher_gympal"
        android:drawablePadding="7.5dp"
        android:ems="10"
        android:hint="@string/bench_press"
        android:textSize="25dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingLeft="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lift1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lift3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textborder"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/ic_launcher_gympal"
        android:drawablePadding="4.5dp"
        android:ems="10"
        android:hint="@string/deadlift"
        android:textSize="25dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lift2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/updateConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonstyle1"
        android:text="Confirm"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>