<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:background="@color/background"
        tools:context=".viewStats">

        <TextView
            android:id="@+id/squat_num"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="88dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/squat_txt"
            app:layout_constraintTop_toBottomOf="@+id/stats_pic" />

        <TextView
            android:id="@+id/bench_num"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bench_txt"
            app:layout_constraintTop_toBottomOf="@+id/squat_num" />

        <TextView
            android:id="@+id/deadlift_num"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deadlift_txt"
            app:layout_constraintTop_toBottomOf="@+id/bench_num" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/stats_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:title="Lifting Stats"
            app:titleTextColor="#FFFF" />

        <ImageView
            android:id="@+id/stats_pic"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_toolbar"
            android:src="@drawable/ic_launcher_gympal" />

        <TextView
            android:id="@+id/squat_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="88dp"
            android:gravity="end"
            android:text="@string/squat"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_pic"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/deadlift_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/deadlift"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bench_txt" />


        <TextView
            android:id="@+id/bench_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/bench_press"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/squat_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>